# flow-pipe

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
.github/workflows/: api-image.yaml  cli-image.yaml  controller-image.yaml  e2e-k3s-test.yaml  e2e-k3s.yaml  helm-package.yaml  runtime-base-image.yaml  runtime-image.yaml  runtime-images.yaml
.k3s-kubeconfig/: kubeconfig
api/: Dockerfile  README.md  go.mod  go.sum
api/cmd/flow-api/: main.go
api/flow/: server.go
api/internal/config/: config.go  env.go  load.go
api/internal/model/: schema.go
api/internal/observability/: observability.go
api/internal/server/: auth.go  grpc.go  http.go  server.go
api/internal/service/: flow_service.go  schema_registry_service.go  validate.go
api/internal/store/: etcd.go  etcd_schema_registry.go  etcd_schema_registry_test.go  store.go
api/model/: meta.go
api/server/: server.go  store.go
api/store/: etcd_store.go  keys.go
api/util/: validate.go
cli/: Dockerfile  README.md  go.mod
cli/cmd/flowctl/: api.go  commands_test.go  get.go  list.go  main.go  output.go  rollback.go  root.go  run.go  schema.go  status.go  stop.go  submit.go  update.go  validate.go
cli/internal/: root.go  run.go  submit.go  validate.go
cli/internal/loader/: flows_test.go  load.go  load_test.go
cmake/: flowpipeConfig.cmake.in  flowpipeConfigVersion.cmake.in
controller/: Dockerfile  README.md  go.mod  go.sum
controller/cmd/flow-controller/: main.go
controller/internal/config/: config.go  env.go  load.go  util.go
controller/internal/controller/: controller.go  reconcile.go  runtime.go  runtime_test.go  watch.go  workqueue.go  workqueue_memory.go
controller/internal/kube/: client.go
controller/internal/observability/: observability.go
controller/internal/store/: etcd.go  etcd_test.go  store.go
controller/pkg/api/: types.go
deploy/: README.md
deploy/argocd/: application-flow-pipeline.yaml
deploy/grafana/: flowpipe-api-dashboard.json  flowpipe-controller-dashboard.json  flowpipe-overview-dashboard.json  flowpipe-runtime-dashboard.json
deploy/helm/flow-pipe/: Chart.yaml  values.yaml
deploy/helm/flow-pipe/dashboards/: flow-pipe-runtime.json
deploy/helm/flow-pipe/templates/: NOTES.txt  _helpers.tpl  alerting-rules.yaml  api-auth-secret.yaml  api-config.yaml  api-deployment.yaml  api-grpc-service.yaml  api-ingress.yaml  api-service.yaml  controller-config.yaml  controller-deployment.yaml  controller-service.yaml  etcd-servicemonitor.yaml  etcd.yaml  grafana-dashboards.yaml  grafana-datasources.yaml  namespace.yaml  observability-config.yaml  rbac.yaml
docker/: README.md
docker/base/: Dockerfile
docker/dev/: Dockerfile
docker/runtime/: Dockerfile
docs/: concepts.md  deployment.md  index.md  non-goals.md  quickstart.md
examples/: CMakeLists.txt  README.md
examples/csv_pipeline/: CMakeLists.txt  csv_parser.cc  csv_sink.cc  csv_source.cc  main.cc
examples/custom_stage/: CMakeLists.txt  main.cc  uppercase_stage.cc  uppercase_stage.h
examples/fanout_fanin/: CMakeLists.txt  aggregate_stage.cc  fanout_stage.cc  main.cc
flows/: README.md  fanout.yaml  noop.json  noop.k3s.yaml  noop.observability.k3s.yaml  noop.observability.yaml  noop.yaml  schema.registry.yaml  simple.pipeline.observability.k3s.yaml  simple_pipeline.yaml
pkg/flow/codec/: codec_test.go  from_json.go  to_json.go
pkg/flow/diff/: diff.go  diff_test.go
pkg/flow/fingerprint/: fingerprint.go  fingerprint_test.go
pkg/flow/normalize/: normalize.go  normalize_test.go
pkg/flow/validate/: errors.go  validate.go  validate_test.go
proto/: CMakeLists.txt  README.md  flow.proto  service.proto
proto/flowpipe/v1/: flow.proto  observability.proto  service.proto
runtime/: CMakeLists.txt  Dockerfile  METRICS.md  README.md
runtime/cmd/flow_runtime/: main.cc
runtime/docker/: Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.runtime  README.md
runtime/include/flowpipe/: bounded_queue.h  configurable_stage.h  durable_queue.h  flow_spec.h  payload.h  plugin.h  protobuf_config.h  queue.h  queue_runtime.h  runtime.h  signal_handler.h  stage.h  stage_factory.h  stage_metrics.h  stage_registry.h  stage_runner.h  stop_token.h
runtime/include/flowpipe/observability/: defaults.h  local_logging.h  logging.h  logging_runtime.h  metrics.h  observability.h  observability_state.h  tracing.h
runtime/include/flowpipe/otel/: metrics.h  telemetry.h
runtime/include/flowpipe/util/: yaml_to_json.h
runtime/src/: runtime.cc  signal_handler.cc  stage_factory.cc  stage_metrics.cc  stage_registry.cc  stage_runner.cc
runtime/src/metrics/: otel_metrics.cc
runtime/src/observability/: defaults.cc  local_logging.cc  logging.cc  logging_runtime.cc  metrics.cc  observability.cc  observability_state.cc  tracing.cc
runtime/src/otel/: metrics.cc  telemetry.cc
runtime/src/stages/: noop_source.cc  noop_transform.cc  stdout_sink.cc
runtime/tests/: CMakeLists.txt  payload_meta_test.cc  queue_test.cc  stage_registry_test.cc  stage_runner_test.cc
stages/noop_source/: CMakeLists.txt  noop_source.cc  noop_source.proto
stages/noop_transform/: CMakeLists.txt  noop_transform.cc  noop_transform.proto
stages/stdout_sink/: CMakeLists.txt  stdout_sink.cc
tools/: README.md  e2e-k3s.sh  gen_go_protos.sh  k3s-compose.yaml
